My Portfolio Website

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 
     <!-- Icon -->
 
-    <link rel="icon" href="avengers.ico" />
+    <link
+      rel="icon"
+      href="https://art-apurv.github.io/Portfolio/images/Icon.png"
+    />
 
     <!-- Google font -->
 
@@ -33,11 +36,22 @@
 
   <body>
     <div class="top-container">
-      <img class="top-cloud" src="/images/cloud.png" alt="cloud-img" />
+      <img
+        class="top-cloud"
+        src="https://art-apurv.github.io/Portfolio/images/cloud.png"
+        alt="cloud-img"
+      />
       <h1>I'm Apurv.</h1>
       <p class="para">I am a Frontend Developer.</p>
-      <img class="bottom-cloud" src="/images/cloud.png" alt="cloud-img" />
-      <img src="/images/mountainl.png" alt="mountain image" />
+      <img
+        class="bottom-cloud"
+        src="https://art-apurv.github.io/Portfolio/images/cloud.png"
+        alt="cloud-img"
+      />
+      <img
+        src="https://art-apurv.github.io/Portfolio/images/mountainl.png"
+        alt="mountain image"
+      />
     </div>
 
     <div class="middle-container">
@@ -45,7 +59,7 @@
         <img
           class="profile_picture"
           src="https://lh3.googleusercontent.com/a-/AOh14GhGsvSm5ISXGSDlHSZ0e-Xau1Kxqa00vj7LP6fu=s360-p-no"
-          alt="Akaza Image"
+          alt="My Image"
           height="200px"
         />
         <h2>Hello.</h2>
@@ -62,7 +76,7 @@
         <div class="skill-1">
           <img
             class="coding"
-            src="/images/coding.png"
+            src="https://art-apurv.github.io/Portfolio/images/coding.png"
             alt="coding"
             height="200px"
             width="200px"
@@ -77,7 +91,7 @@
         <div class="skill-2">
           <img
             class="game"
-            src="/images/online-game.png"
+            src="https://art-apurv.github.io/Portfolio/images/online-game.png"
             alt="online games"
             height="200px"
             width="200px"
