My Portfolio Website

--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
 
     <!-- Icon -->
 
-    <link
-      rel="icon"
-      href="https://art-apurv.github.io/Portfolio/images/Icon.png"
-    />
+    <link rel="icon" href="/images/Icon.png" />
 
     <!-- Google font -->
 
