--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 
     <!-- Icon -->
 
-    <link rel="icon" href="/images/Icon.png" />
+    <link
+      rel="icon"
+      href="https://art-apurv.github.io/Portfolio/images/Icon.png"
+    />
 
     <!-- Google font -->
 
