--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             height="200px"
             width="200px"
           />
-          <h3>Online Gamer</h3>
+          <h3>Online Gaming</h3>
           <p>
             I love playing online multiplayer games and CODM is my favorite game
             right now.
